# lifecycle-platform-challenge

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
ai-session/: claude-log.md
docs/: airflow.md  bigquery.md  observability.md  pipeline-orchestration.md  value-model.md
docs/plan/: 00-setup.md  01-bigquery.md  02-send-pipeline.md  03-airflow-dag.md  04-value-model.md  05-observability.md  plan.md
output/: observability.md  value-model-integration.md
src/lifecycle_platform_challenge/: __init__.py
src/lifecycle_platform_challenge/dags/: campaign_dag.py
src/lifecycle_platform_challenge/dags/tasks/: build_audience.py  notify.py  send_campaign.py  validate_audience.py
src/lifecycle_platform_challenge/pipeline/: dedup.py  esp.py  logger.py  response.py  send.py
src/lifecycle_platform_challenge/sql/: audience.sql
tests/: airflow_mock.py  test_audience_sql.py  test_dag.py  test_dedup.py  test_response.py  test_send.py
